--- a/datacleaning/Cleaning data_final.ipynb
+++ b/datacleaning/Cleaning data_final.ipynb
@@ -19,7 +19,7 @@
     "import urllib.request \n",
     "import pandas as pd\n",
     "\n",
-    "#Iin this code I am srapping the relavent links to files from certain dates - here I am extracting one link as an example. \n",
+    "#In this code I am srapping the relavent links to files from certain dates - here I am extracting one link as an example. \n",
     "\n",
     "URL = \"https://www.theyworkforyou.com/pwdata/scrapedxml/debates/\"\n",
     "\n",
